src/infra/modules/eks/main.tf
# --- EKS Cluster Security Group ---
resource "aws_security_group" "eks_cluster" {
  name        = "cluster"
  description = "Security group for Kubernetes cluster"
  vpc_id      = var.vpc_id
}

resource "aws_vpc_security_group_egress_rule" "eks_cluster" {
  security_group_id = aws_security_group.eks_cluster.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "eks_cluster" {
  security_group_id = aws_security_group.eks_cluster.id
  ip_protocol       = "tcp"
  cidr_ipv4         = var.cidr_block
  from_port         = 443
  to_port           = 443
  description       = "Allow HTTPS Access to Cluster."
}

resource "aws_vpc_security_group_ingress_rule" "eks_nodeport_tcp" {
  security_group_id = aws_security_group.eks_cluster.id
  ip_protocol       = "tcp"
  cidr_ipv4         = var.cidr_block
  from_port         = 30000
  to_port           = 32768
  description       = "Allow NodePort TCP Traffic."
}

resource "aws_vpc_security_group_ingress_rule" "eks_nodeport_udp" {
  security_group_id = aws_security_group.eks_cluster.id
  ip_protocol       = "udp"
  cidr_ipv4         = var.cidr_block
  from_port         = 30000
  to_port           = 32768
  description       = "Allow NodePort UDP Traffic."
}

resource "aws_security_group" "eks_nodes" {
  name        = "cluster-nodes"
  description = "Allow access to Cluster Nodes"
  vpc_id      = var.vpc_id

  egress {
    from_port = 0
    to_port   = 0

    protocol    = "-1"
    cidr_blocks = [var.cidr_block]
  }
}

resource "aws_security_group_rule" "eks_nodes" {
  security_group_id = aws_security_group.eks_nodes.id
  type              = "ingress"
  cidr_blocks       = [var.cidr_block]
  from_port         = 30000
  to_port           = 32768
  description       = "Nodeport tcp"
  protocol          = "tcp"
}


# --- EKS Cluster IAM ---
resource "aws_iam_role" "eks_cluster" {
  name = "${var.cluster_name}-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action    = "sts:AssumeRole"
      Effect    = "Allow"
      Principal = { Service = "eks.amazonaws.com" }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "eks_cluster" {
  for_each = toset([
    "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy",
    "arn:aws:iam::aws:policy/AmazonEKSVPCResourceController"
  ])

  policy_arn = each.value
  role       = aws_iam_role.eks_cluster.name
}


resource "aws_iam_role" "eks_nodes" {
  name = "eks-node-group-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action    = "sts:AssumeRole"
      Effect    = "Allow"
      Principal = { Service = "ec2.amazonaws.com" }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "eks_nodes" {
  for_each = toset([
    "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy",
    "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy",                  # CNI
    "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly",    # ECR
    "arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy",           # Cloudwatch Agent
    "arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy", # CSI Driver
  ])

  policy_arn = each.value
  role       = aws_iam_role.eks_nodes.name
}


# EKS OIDC Provider
data "tls_certificate" "eks_oidc" {
  url = aws_eks_cluster.eks_cluster.identity[0].oidc[0].issuer
}

resource "aws_iam_openid_connect_provider" "eks_oidc" {
  client_id_list  = ["sts.amazonaws.com"]
  thumbprint_list = [data.tls_certificate.eks_oidc.certificates[0].sha1_fingerprint]
  url             = data.tls_certificate.eks_oidc.url
}


# --- Workload Identity IAM ---
resource "aws_iam_role" "workload_identity" {
  name = "workload-identity"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Effect = "Allow"
      Action = "sts:AssumeRoleWithWebIdentity"

      Principal = {
        Federated = aws_iam_openid_connect_provider.eks_oidc.arn
      }

      Condition = {
        StringEquals = {
          "${local.oidc_provider_host}:sub" = "system:serviceaccount:${var.namespace}:${var.service_account}"
        }
      }
    }]
  })
}

resource "aws_iam_policy" "workload_identity" {
  name = "workload-identity"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Effect = "Allow"

      Action = [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
      ]

      Resource = [var.secret_arn]
    }]
  })
}

resource "aws_iam_role_policy_attachment" "workload_identity" {
  role       = aws_iam_role.workload_identity.name
  policy_arn = aws_iam_policy.workload_identity.arn
}


# --- AWS Load Balancer Controller IAM ---
resource "aws_iam_policy" "aws_load_balancer_controller" {
  name        = "AWSLoadBalancerControllerIAMPolicy"
  description = "IAM policy for AWS Load Balancer Controller"

  policy = file("${path.module}/files/alb-iam-policy.json")
}

resource "aws_iam_role" "aws_load_balancer_controller" {
  name = "AmazonEKSLoadBalancerControllerRole"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Action = "sts:AssumeRoleWithWebIdentity"

        Principal = {
          Federated = aws_iam_openid_connect_provider.eks_oidc.arn
        }

        Condition = {
          StringEquals = {
            "${local.oidc_provider_host}:sub" = "system:serviceaccount:kube-system:${var.alb_controller_sa}"
          }
        }
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "alb_controller_attach" {
  role       = aws_iam_role.aws_load_balancer_controller.name
  policy_arn = aws_iam_policy.aws_load_balancer_controller.arn
}


# --- EBS CSI Driver IAM ---
resource "aws_iam_role" "ebs_csi_driver" {
  name = "ebs-csi-driver"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Effect = "Allow"
      Action = "sts:AssumeRoleWithWebIdentity"

      Principal = {
        Federated = aws_iam_openid_connect_provider.eks_oidc.arn
      }

      Condition = {
        StringLike = {
          "${local.oidc_provider_host}:sub" = "system:serviceaccount:kube-system:ebs-csi-*"
        }
      }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "ebs_csi_driver" {
  role       = aws_iam_role.ebs_csi_driver.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy"
}


# --- EKS Cluster ---
resource "aws_eks_cluster" "eks_cluster" {
  name     = var.cluster_name
  role_arn = aws_iam_role.eks_cluster.arn

  vpc_config {
    subnet_ids              = var.private_subnet_ids
    security_group_ids      = [aws_security_group.eks_cluster.id]
    endpoint_private_access = true
    endpoint_public_access  = true
  }

  access_config {
    authentication_mode                         = "API_AND_CONFIG_MAP"
    bootstrap_cluster_creator_admin_permissions = true
  }

  depends_on = [aws_iam_role_policy_attachment.eks_cluster]
}

resource "aws_eks_addon" "ebs_csi" {
  addon_name               = "aws-ebs-csi-driver"
  cluster_name             = aws_eks_cluster.eks_cluster.name
  service_account_role_arn = aws_iam_role.ebs_csi_driver.arn

  depends_on = [aws_eks_node_group.eks_nodes]
}


resource "aws_eks_access_entry" "console_user" {
  count = var.eks_admin_arn == "" ? 0 : 1

  cluster_name      = aws_eks_cluster.eks_cluster.name
  principal_arn     = var.eks_admin_arn
  kubernetes_groups = [var.kubernetes_group]
  type              = "STANDARD"
}


# --- EKS Node Group ---
resource "aws_eks_node_group" "eks_nodes" {
  cluster_name    = aws_eks_cluster.eks_cluster.name
  node_group_name = "eks-nodegroup"
  node_role_arn   = aws_iam_role.eks_nodes.arn
  subnet_ids      = var.private_subnet_ids
  instance_types  = ["t3.medium"]

  scaling_config {
    desired_size = 2
    max_size     = 2
    min_size     = 2
  }

  launch_template {
    id      = aws_launch_template.eks_nodes.id
    version = aws_launch_template.eks_nodes.latest_version
  }

  depends_on = [aws_iam_role_policy_attachment.eks_nodes]
}

resource "aws_launch_template" "eks_nodes" {
  name = "eks-template"

  block_device_mappings {
    device_name = "/dev/xvda"
    ebs {
      volume_size = "20"
      volume_type = "gp3"
      iops        = 3000
      throughput  = 125
    }
  }
}
